@@ -50,7 +50,7 @@
     <table class="blank padded tags" style="width:100%;text-align:left;margin:10px 0px">
       <thead>
         <tr>
-          <th colspan="10">Tags
+          <th colspan="6">Tags
             <%= link_to_function image_tag('gentleface/16/checkbox_checked.png', alt: 'Select All', title: 'Select All Tags', class: 'smudge', style: 'margin-left:4px;margin-right:4px;vertical-align:text-bottom'), "checkAllWithSelector('.tag-box');", class: 'bubble-azure', style: 'padding-top:10px' %>
             <%= link_to_function image_tag('gentleface/16/checkbox_unchecked.png', alt: 'Deselect All', title: 'Deselect All Tags', class: 'smudge', style: 'margin-left:4px;margin-right:4px;vertical-align:text-bottom'), "uncheckAllWithSelector('.tag-box');", class: 'bubble-azure', style: 'padding-top:10px' %>
             contains <%= select_tag 'tag_filter', options_for_select([['at least one', 'any'],['all', 'all']]) %> selected tag(s)
